--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="foreach.js"> </script>
+    <script src="index2.js"> </script>
 </body>
 </html>
